optimisation des images

--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,13 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
+						<a href="index.html#ancre-service">Nos Sérvices</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="index.html#ancre-realisation">Nos réalisation</a>
+					</li>
+					<li>
+						<a href="index.html#ancre-contact">Contact</a>
 					</li>
 				</ul>
 			</div>
