--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" class="nav-liens">Accueil</a>
 					</li>
 					<li>
+						<a href="#ancre-service">Nos Sérvices</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="#ancre-realisation">Nos réalisation</a>
+					</li>
+					<li>
+						<a href="#ancre-contact">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -82,7 +86,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2 class="padding-Time">La chouette agence est une agence de web desing situé sur Lyon, qui aide <br> les entreprises à devenir attractive et visilble sur le web. <br>Voici nos services : </h2>
+				<div class="sousligne margin-Time"></div>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -110,7 +115,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" id="ancre-service"></span>
 				</div>
 				<h2 class="mg-md text-center">
 					Illustrations
@@ -122,8 +127,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<blockquote class="blockquote-color">"La chouette agence de Lyon est une excellente agence web ! <br> Les web designers ont réussi à capturer l'essence de notre <br> entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos vente en ligne à Lyon." </blockquote>
+				<p class="blockquote-color">Maxime Guibard, PDG de À vos fourchette</p>
 			</div>
 		</div>
 	</div>
@@ -139,7 +144,7 @@
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -152,12 +157,13 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2 id="ancre-realisation">Nous travaillons avec beaucoup de clients voici nos créations</h2>
+				<div class="sousligne"></div>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1-compressed (3).jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-compressed (3).jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -177,7 +183,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -186,7 +192,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
@@ -206,8 +212,8 @@
 			<h4 class="mg-md text-center tc-white black-background marge-Time">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h4>
-			<div class="col-sm-12 text-center black-background">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean black btn-rd btn-lg cta-hero-pr-btn-contact opacity-Time ">Contact</a>
+			<div class="col-sm-12 text-center black-background" id="ancre-contact">
+				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean black btn-rd btn-lg cta-hero-pr-btn-contact opacity-Time ">Contact</a>
 			</div>
 		</div>
 	</div>
