optimisation du format des images

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 					Parlons web design !
 				</h1>
 				<p class="text-center mg-lg  black tight-width-whitespace weight text-size">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+					En quoi pouvons-nous vous aidez ? (Création d'un site internet, améliorer mon referencement sur le web,...).<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
 			</div>
