--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="keywords" content="spécialiste, entreprise web design, agence web contact, web design contact, projet, création site, référencer un site, site internet, agence web design, agence web à Lyon, référencement naturel, refonte, entreprise site internet, web designer Lyon, visibilité site web, être attractif, contacter, site web">
     <meta name="description" content=" Vous recherchez à améliorer votre notoriété sur le web ? La chouette Agence de Lyon est là pour vous. La chouette Agence est une agence spécialisée dans le domaine du web design sur la ville de Lyon. Elle accompagne les entreprises dans la création de site internet et la mise en place de stratégie web(référencement naturel, SEO, Visibilité sur le web...)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="preload">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
