--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
 	<meta name="description" content=" Vous recherchez à améliorer votre notoriété sur le web ?La chouette Agence de Lyon est là pour vous. La chouette Agence est une agence spécialisée dans le domaine du web design sur la ville de Lyon.Elle accompagne les entreprises dans la création de site internet et la mise en place de stratégie web(référencement naturel, SEO, Visibilité sur le web...)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="preload" as="style" href="style.css">
-	<link rel="preload" as="style" href="./css/bootstrap.css">
+	<link rel="preload" as="font-awesome" href="fonts/et-line.woff">
+	<link rel="preload" as="font-awesome" href="fonts/fontawesome-webfont.woff2">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
